force-app/main/default/objects/PricebookEntry/fields/COMM_FirstPeriodDailyMaximum__c.field-meta.xml
<CustomField>
    <fullName>COMM_FirstPeriodDailyMaximum__c</fullName>
    <description>The First Period Daily Maximum value aplied to the days defined between that period</description>
    <label>First Period Daily Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>