force-app/main/default/objects/PricebookEntry/fields/COMM_FirstPeriodEndDay__c.field-meta.xml
<CustomField>
    <fullName>COMM_FirstPeriodEndDay__c</fullName>
    <description>The day the first Period&apos;s price stops being applied</description>
    <label>First Period End Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>