force-app/main/default/objects/PricebookEntry/fields/COMM_FirstPeriodStartDay__c.field-meta.xml
<CustomField>
    <fullName>COMM_FirstPeriodStartDay__c</fullName>
    <description>The day the first Period&apos;s price starts to be applied</description>
    <label>First Period Start Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>