force-app/main/default/objects/PricebookEntry/fields/COMM_FourthPeriodDailyMaximum__c.field-meta.xml
<CustomField>
    <fullName>COMM_FourthPeriodDailyMaximum__c</fullName>
    <description>The Fourth Period Daily Maximum value applied to the days defined between that period</description>
    <label>Fourth Period Daily Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>