force-app/main/default/objects/PricebookEntry/fields/COMM_FourthPeriodEndDay__c.field-meta.xml
<CustomField>
    <fullName>COMM_FourthPeriodEndDay__c</fullName>
    <description>The day the fourth Period&apos;s price stops being applied</description>
    <label>Fourth Period End Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>