force-app/main/default/objects/PricebookEntry/fields/COMM_FourthPeriodStartDay__c.field-meta.xml
<CustomField>
    <fullName>COMM_FourthPeriodStartDay__c</fullName>
    <description>The day the fourth Period&apos;s price starts to be applied</description>
    <label>Fourth Period Start Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>