force-app/main/default/objects/PricebookEntry/fields/COMM_SecondPeriodDailyMaximum__c.field-meta.xml
<CustomField>
    <fullName>COMM_SecondPeriodDailyMaximum__c</fullName>
    <description>The Second Period Daily Maximum value applied to the days defined between that period</description>
    <label>Second Period Daily Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>