force-app/main/default/objects/PricebookEntry/fields/COMM_SecondPeriodEndDay__c.field-meta.xml
<CustomField>
    <fullName>COMM_SecondPeriodEndDay__c</fullName>
    <description>The day the second Period&apos;s price stops being applied</description>
    <label>Second Period End Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>