force-app/main/default/objects/PricebookEntry/fields/COMM_SecondPeriodStartDay__c.field-meta.xml
<CustomField>
    <fullName>COMM_SecondPeriodStartDay__c</fullName>
    <description>The day the second Period&apos;s price starts to be applied</description>
    <label>Second Period Start Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>