force-app/main/default/objects/PricebookEntry/fields/COMM_Third15MinuteUnit__c.field-meta.xml
<CustomField>
    <fullName>COMM_Third15MinuteUnit__c</fullName>
    <description>The price applied during the third 15 minutes</description>
    <label>Third 15 minute unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>