force-app/main/default/objects/PricebookEntry/fields/COMM_ThirdPeriodDailyMaximum__c.field-meta.xml
<CustomField>
    <fullName>COMM_ThirdPeriodDailyMaximum__c</fullName>
    <description>The Third Period Daily Maximum value applied to the days defined between that period</description>
    <label>Third Period Daily Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>