force-app/main/default/objects/PricebookEntry/fields/COMM_ThirdPeriodEndDay__c.field-meta.xml
<CustomField>
    <fullName>COMM_ThirdPeriodEndDay__c</fullName>
    <description>The day the third Period&apos;s price stops being applied</description>
    <label>Third Period End Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>