force-app/main/default/objects/PricebookEntry/fields/COMM_ThirdPeriodStartDay__c.field-meta.xml
<CustomField>
    <fullName>COMM_ThirdPeriodStartDay__c</fullName>
    <description>The day the third Period&apos;s price starts to be applied</description>
    <label>Third Period Start Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>