force-app/main/default/objects/PricebookEntry/validationRules/COMM_VerifyDays.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyDays</fullName>
    <active>true</active>
    <description>Validates if the number defined for Day fields is positive</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Product2.Family, &quot;Parking&quot;),
    OR(
        COMM_FirstPeriodStartDay__c &lt;= 0,
        COMM_SecondPeriodStartDay__c &lt;= 0,
        COMM_ThirdPeriodStartDay__c &lt;= 0,
        COMM_FourthPeriodStartDay__c &lt;= 0,
        COMM_FirstPeriodEndDay__c &lt;= 0,
        COMM_SecondPeriodEndDay__c &lt;= 0,
        COMM_ThirdPeriodEndDay__c &lt;= 0,
        COMM_FourthPeriodEndDay__c &lt;= 0
    )
)</errorConditionFormula>
    <errorMessage>The day should be a positive number</errorMessage>
</ValidationRule>