force-app/main/default/objects/PricebookEntry/validationRules/COMM_VerifyEndandStartDays.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyEndandStartDays</fullName>
    <active>true</active>
    <description>Validates if the End day is greater then the Start day</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Product2.Family, &quot;Parking&quot;), 
    OR(
        COMM_FirstPeriodEndDay__c &lt;= COMM_FirstPeriodStartDay__c,
        COMM_SecondPeriodEndDay__c &lt;= COMM_SecondPeriodStartDay__c,
        COMM_ThirdPeriodEndDay__c &lt;= COMM_ThirdPeriodStartDay__c,
        COMM_FourthPeriodEndDay__c &lt;= COMM_FourthPeriodStartDay__c
    )
)</errorConditionFormula>
    <errorMessage>The End day should be greater then Start day</errorMessage>
</ValidationRule>