force-app/main/default/objects/PricebookEntry/validationRules/COMM_VerifyFamilyUnitPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyFamilyUnitPrice</fullName>
    <active>true</active>
    <description>Validates if the Unit Price is 0 for Parking Products</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Product2.Family, &quot;Parking&quot;),
    UnitPrice &lt;&gt; 0
)</errorConditionFormula>
    <errorMessage>The unit price for Parking should be 0</errorMessage>
</ValidationRule>