force-app/main/default/objects/PricebookEntry/validationRules/COMM_VerifyFirstPeriodFields.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyFirstPeriodFields</fullName>
    <active>true</active>
    <description>Validate if all fields of the First Period are set to activate record</description>
    <errorConditionFormula>AND(
    IsActive,
    ISPICKVAL(Product2.Family, &quot;Parking&quot;), 
    OR(
        ISBLANK(COMM_FirstPeriodStartDay__c),
        ISBLANK(COMM_FirstPeriodEndDay__c),
        ISBLANK(COMM_FirstPeriodDailyMaximum__c)
    )
)</errorConditionFormula>
    <errorMessage>To set as active, all First Period fields are required</errorMessage>
</ValidationRule>