force-app/main/default/objects/PricebookEntry/validationRules/COMM_VerifyFourthPeriodFields.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyFourthPeriodFields</fullName>
    <active>true</active>
    <description>Validate if all fields of the Fourth Period are set</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Product2.Family, &quot;Parking&quot;),
    OR(
        AND(
            NOT(ISBLANK(COMM_FourthPeriodStartDay__c)),
            OR(
                ISBLANK(COMM_FourthPeriodEndDay__c),
                ISBLANK(COMM_FourthPeriodDailyMaximum__c)
            )
        ),
        AND(
            NOT(ISBLANK(COMM_FourthPeriodEndDay__c)),
            OR(
                ISBLANK(COMM_FourthPeriodStartDay__c),
                ISBLANK(COMM_FourthPeriodDailyMaximum__c)
            )
        ),
        AND(
            NOT(ISBLANK(COMM_FourthPeriodDailyMaximum__c)),
            OR(
                ISBLANK(COMM_FourthPeriodStartDay__c),
                ISBLANK(COMM_FourthPeriodEndDay__c)
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>All Fourth Period fields are required</errorMessage>
</ValidationRule>