force-app/main/default/objects/PricebookEntry/validationRules/COMM_VerifyPeriodsEndDay.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyPeriodsEndDay</fullName>
    <active>true</active>
    <description>Validates if the end day registered is less then 366</description>
    <errorConditionFormula>AND(
	ISPICKVAL(Product2.Family, &quot;Parking&quot;), 
	IF(
		AND(NOT(ISBLANK(COMM_FourthPeriodStartDay__c)), COMM_FourthPeriodEndDay__c &lt;&gt; 366),
		TRUE,
		IF(
			AND(
				ISBLANK(COMM_FourthPeriodStartDay__c),
				NOT(ISBLANK(COMM_ThirdPeriodStartDay__c)),
				COMM_ThirdPeriodEndDay__c &lt;&gt; 366
			),
			TRUE,
			IF(
				AND(
					ISBLANK(COMM_ThirdPeriodStartDay__c),
					NOT(ISBLANK(COMM_SecondPeriodStartDay__c)),
					COMM_SecondPeriodEndDay__c &lt;&gt; 366
				),
				TRUE,
				IF(
					AND(
						ISBLANK(COMM_SecondPeriodStartDay__c),
						NOT(ISBLANK(COMM_FirstPeriodStartDay__c)),
						COMM_FirstPeriodEndDay__c &lt;&gt; 366
					),
					TRUE,
					FALSE
				)
			)
		)
	)
)</errorConditionFormula>
    <errorMessage>Last period must be 366 days</errorMessage>
</ValidationRule>