force-app/main/default/objects/PricebookEntry/validationRules/COMM_VerifySecondPeriodFields.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifySecondPeriodFields</fullName>
    <active>true</active>
    <description>Validate if all fields of the Second Period are set</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Product2.Family, &quot;Parking&quot;),
    OR(
        AND(
            NOT(ISBLANK(COMM_SecondPeriodStartDay__c)),
            OR(
                ISBLANK(COMM_SecondPeriodEndDay__c),
                ISBLANK(COMM_SecondPeriodDailyMaximum__c)
            )
        ),
        AND(
            NOT(ISBLANK(COMM_SecondPeriodEndDay__c)),
            OR(
                ISBLANK(COMM_SecondPeriodStartDay__c),
                ISBLANK(COMM_SecondPeriodDailyMaximum__c)
            )
        ),
        AND(
            NOT(ISBLANK(COMM_SecondPeriodDailyMaximum__c)),
            OR(
                ISBLANK(COMM_SecondPeriodStartDay__c),
                ISBLANK(COMM_SecondPeriodEndDay__c)
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>All Second Period fields are required</errorMessage>
</ValidationRule>