force-app/main/default/objects/PricebookEntry/validationRules/COMM_VerifyThirdPeriodFields.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyThirdPeriodFields</fullName>
    <active>true</active>
    <description>Validate if all fields of the Third Period are set</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Product2.Family, &quot;Parking&quot;),
    OR(
        AND(
            NOT(ISBLANK(COMM_ThirdPeriodStartDay__c)),
            OR(
                ISBLANK(COMM_ThirdPeriodEndDay__c),
                ISBLANK(COMM_ThirdPeriodDailyMaximum__c)
            )
        ),
        AND(
            NOT(ISBLANK(COMM_ThirdPeriodEndDay__c)),
            OR(
                ISBLANK(COMM_ThirdPeriodStartDay__c),
                ISBLANK(COMM_ThirdPeriodDailyMaximum__c)
            )
        ),
        AND(
            NOT(ISBLANK(COMM_ThirdPeriodDailyMaximum__c)),
            OR(
                ISBLANK(COMM_ThirdPeriodStartDay__c),
                ISBLANK(COMM_ThirdPeriodEndDay__c)
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>All Third Period fields are required</errorMessage>
</ValidationRule>