force-app/main/default/objects/PricebookEntry/validationRules/COMM_VerifyUnitPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyUnitPrice</fullName>
    <active>true</active>
    <description>Validates if the Unit Price is not negative</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Product2.Family, &quot;Parking&quot;)),
    UnitPrice &lt; 0
)</errorConditionFormula>
    <errorMessage>The unit price cannot be negative</errorMessage>
</ValidationRule>